        - Fix infinite loops on old perls with a recent Try::Tiny
        - Improve "fork()" on Win32 by reimplementing a more robust DBIC
          thread support (still problematic, pending a DBI fix)
        - Properly quote table name on INSERT with no values
        - Work around possible Storage destruction warnings
        - Fix count of grouped resultsets using HAVING with aliases

    * Misc
        - Switch all serialization to use Storable::nfreeze for portable
          architecture independent ice
        - Fix the bogus META.yml dependency injection issue for good
        - Refactor DBIx::Class::Storage::Statistics::debugfh() to be lazy

0.08124 2010-10-28 14:23 (UTC)
    * New Features / Changes
        - Add new -ident "function" indicating rhs is a column name
          { col => { -ident => 'othercol' } } vs { col => \'othercol' }
        - Extend 'proxy' relationship attribute
        - Use DBIx::Class::Storage::Debug::PrettyPrint when the
          environment variable DBIC_TRACE_PROFILE is set, see
          DBIx::Class::Storage for more information
        - Implemented add_unique_constraints() which delegates to
          add_unique_constraint() as appropriate
        - add_unique_constraint() now poparly throws if called with
          multiple constraint definitions
        - No longer depend on SQL::Abstract::Limit - DBIC has been doing
          most of the heavy lifting for a while anyway
        - FilterColumn now passes data through when transformations
          are not specified rather than throwing an exception.
        - Optimized RowNum based Oracle limit-dialect (RT#61277)
        - Requesting a pager on a resultset with cached entries now
          throws an exception, instead of returning a 1-page object
          since the amount of rows is always equal to the "pagesize"
        - $rs->pager now uses a lazy count to determine the amount of
          total entries only when really needed, instead of doing it